--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -27,7 +27,7 @@
    ],
    "source": [
     "#assigning a variable (Folder_Path) to our current working folder\n",
-    "Temp_Folder_Path = r\"C:\\Users\\sasikanthchowdhary.n\\OneDrive - Mu Sigma Business Solutions Pvt. Ltd\\Desktop\\TEMP FOLDER\"\n",
+    "Temp_Folder_Path = r\"C:\\Users\\sasikanth\\Desktop\\TEMP FOLDER\"\n",
     "\n",
     "#listdir() opening a folder and seeing what's inside.\n",
     "File_View =  os.listdir(Temp_Folder_Path)\n",
