--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "62803289",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
    ],
    "source": [
     "#assigning a variable (Folder_Path) to our current working folder\n",
-    "Temp_Folder_Path = r\"C:/Users/sasikanthchowdhary.n/OneDrive - Mu Sigma Business Solutions Pvt. Ltd/Desktop/TEMP FOLDER\"\n",
+    "Temp_Folder_Path = r\"C:/Users/sasikanthchowdhary.n/Desktop/TEMP FOLDER\"\n",
     "\n",
     "#listdir() opening a folder and seeing what's inside.\n",
     "Folder_View =  os.listdir(Temp_Folder_Path)\n",
